--- a/index.html
+++ b/index.html
@@ -10,24 +10,15 @@
     <header>
         <h1>Tank Driving Application</h1>
         <p id="under">Using blockly!</p>    
-        <p id ="Intro">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque viverra, 
-            erat vitae malesuada feugiat, quam magna dapibus lorem, ac accumsan enim magna 
-            quis nisl. Class aptent taciti sociosqu ad litora torquent per conubia nostra, 
-            per inceptos himenaeos. Aliquam consectetur elementum facilisis. Nam sit amet luctus 
-            magna. Nullam viverra a quam eu volutpat. Curabitur at lobortis mi. Sed pharetra 
-            sapien eget erat varius tristique. In ac aliquam dui. Phasellus sit amet semper 
-            purus. Etiam ut interdum lectus, nec venenatis lacus. Vestibulum ac lectus 
-            non sem tincidunt dignissim. Suspendisse potenti. Aliquam erat volutpat.
-            Praesent ullamcorper, dolor eu posuere iaculis, sapien ipsum sagittis purus, 
-            sit amet cursus sem nunc in lorem. Nulla eu neque massa. Duis vulputate
-            ipsum vitae aliquam pretium. Sed scelerisque, risus sed aliquam posuere, 
-            elit ipsum tempor sapien, a accumsan mauris arcu quis ipsum. Curabitur
-            hendrerit molestie arcu eget ultricies. Fusce quis risus et nunc imperdiet 
-            viverra. Nam sit amet finibus nisl. Pellentesque habitant morbi tristique 
-            senectus et netus et malesuada fames ac turpis egestas.
-        </p>
-        <button type="button" onclick="myTestFunction()">Run code</button>
+       
+    </p>
+    <a href="#" class="cta" onclick="myTestFunction()">
+        <span>EXECUTE CODE</span>
+        <svg width="13px" height="10px" viewBox="0 0 13 10">
+          <path d="M1,5 L11,5"></path>
+          <polyline points="8 1 12 5 8 9"></polyline>
+        </svg>
+      </a>
     </header>
     <div id="blocklyDiv">
             <xml id="toolbox" style="display: none">
@@ -70,6 +61,7 @@
 function myTestFunction() {
    var code = Blockly.Python.workspaceToCode(workspace);
    //sendToPiCode(code)
+   
    console.log(code)
 }
 </script>
